# SoftwareEvalLib

./: .gitmodules  CMakeLists.txt  README.md
ArchLib/: CMakeLists.txt
ArchLib/Models/: CMakeLists.txt
ArchLib/Models/include/: DummyMemoryModel.h  StandardRegisterModel.h  StaticBranchPredictModel.h
ArchLib/Models/src/: CMakeLists.txt  DynamicBranchPredictModel.cpp  StaticBranchPredictModel.cpp
ArchLib/Models/src/CVA6/: CMakeLists.txt  DCacheCtrlModel.cpp  DCacheModel.cpp  ICacheCtrlModel.cpp  ICacheModel.cpp
ArchLib/Models/src/general/: CMakeLists.txt  DynamicBranchPredictModel.cpp  StaticBranchPredictModel.cpp
ArchLib/include/ArchLib/: MicroArchFactory.h
ArchLib/src/: MicroArchFactory.cpp
ArchLib/uArchs/: CMakeLists.txt
ArchLib/uArchs/CV32E40P/: CMakeLists.txt
ArchLib/uArchs/CV32E40P/include/: CV32E40P_Model.h
ArchLib/uArchs/CV32E40P/src/: CV32E40P_InstructionModels.cpp  CV32E40P_Model.cpp
ArchLib/uArchs/CVA6/: CMakeLists.txt
ArchLib/uArchs/CVA6/include/: CVA6_Model.h
ArchLib/uArchs/CVA6/src/: CVA6_InstructionModels.cpp  CVA6_Model.cpp
ArchLib/uArchs/SimpleRISCV_H_fw_DynBrPred/: CMakeLists.txt
ArchLib/uArchs/SimpleRISCV_H_fw_DynBrPred/include/: SimpleRISCV_H_fw_DynBrPred_Model.h
ArchLib/uArchs/SimpleRISCV_H_fw_DynBrPred/src/: SimpleRISCV_H_fw_DynBrPred_InstructionModels.cpp  SimpleRISCV_H_fw_DynBrPred_Model.cpp
TraceLib/: CMakeLists.txt
TraceLib/include/TraceLib/: TraceFactory.h
TraceLib/src/: TraceFactory.cpp
TraceLib/traces/: CMakeLists.txt
TraceLib/traces/AssemblyTrace/: CMakeLists.txt
TraceLib/traces/AssemblyTrace/include/: AssemblyTrace_Channel.h  AssemblyTrace_Monitor.h  AssemblyTrace_Printer.h
TraceLib/traces/AssemblyTrace/src/: AssemblyTrace_InstructionMonitors.cpp  AssemblyTrace_InstructionPrinters.cpp  AssemblyTrace_Monitor.cpp  AssemblyTrace_Printer.cpp
TraceLib/traces/CV32E40P/: CMakeLists.txt
TraceLib/traces/CV32E40P/include/: CV32E40P_Channel.h  CV32E40P_Monitor.h  CV32E40P_Printer.h
TraceLib/traces/CV32E40P/src/: CV32E40P_InstructionMonitors.cpp  CV32E40P_InstructionPrinters.cpp  CV32E40P_Monitor.cpp  CV32E40P_Printer.cpp
TraceLib/traces/CVA6/: CMakeLists.txt
TraceLib/traces/CVA6/include/: CVA6_Channel.h  CVA6_Monitor.h  CVA6_Printer.h
TraceLib/traces/CVA6/src/: CVA6_Monitor.cpp  (+3 more)
TraceLib/traces/InstructionTrace/: CMakeLists.txt
TraceLib/traces/InstructionTrace_RV32IMACFD/: CMakeLists.txt
TraceLib/traces/InstructionTrace_RV64IMACFD/: CMakeLists.txt
TraceLib/traces/SimpleRISCV_H_fw_DynBrPred/: CMakeLists.txt
libs/Components/: CMakeLists.txt
libs/Components/src/: Model.cpp  Monitor.cpp  Printer.cpp  Streamer.cpp
libs/monitors/: CMakeLists.txt
libs/monitors/src/: Factory.cpp  Monitor.cpp
libs/monitors/variants/: CMakeLists.txt
(+71 files in other folders)
