PROJECT(SoftwareEval)

SET(SRC_FILES
  src/libSoftwareEval.cpp
  src/TracerPlugin.cpp
  src/TracePrinterPlugin.cpp
  src/PerformanceEstimatorPlugin.cpp
)

ADD_LIBRARY(${PROJECT_NAME} SHARED
  ${SRC_FILES}
)

ADD_SUBDIRECTORY(libs)

ETISSPlugin(${PROJECT_NAME})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE
  SWEVAL_BACKENDS_LIB
  SWEVAL_MONITORS_LIB
)

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC
  include 
)

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE
  include/SoftwareEval
)
