SET (SRC_FILES
    src/MicroArchFactory.cpp
)

ADD_LIBRARY(ARCH_LIB STATIC ${SRC_FILES})

TARGET_LINK_LIBRARIES(ARCH_LIB PUBLIC
  COMPONENTS_LIB
  TRACES_LIB # TODO: REMOVE! Current workaround to allow ARCH_LIB to use _Channel.h
)

ADD_SUBDIRECTORY(uArchs)
ADD_SUBDIRECTORY(Models)

TARGET_INCLUDE_DIRECTORIES(ARCH_LIB PUBLIC
    include
)

TARGET_INCLUDE_DIRECTORIES(ARCH_LIB PRIVATE
    include/ArchLib
)
