SET (SRC_FILES
    src/TraceFactory.cpp
)

ADD_LIBRARY(TRACES_LIB STATIC ${SRC_FILES})

TARGET_LINK_LIBRARIES(TRACES_LIB PUBLIC
  COMPONENTS_LIB
)

ADD_SUBDIRECTORY(traces)

TARGET_INCLUDE_DIRECTORIES(TRACES_LIB PUBLIC
    include
)

TARGET_INCLUDE_DIRECTORIES(TRACES_LIB PRIVATE
    include/TraceLib
)
