PROJECT(SWEVAL_MONITORS_LIB)

SET (SRC_FILES
  src/Factory.cpp
  src/Monitor.cpp
)

ADD_LIBRARY(${PROJECT_NAME} STATIC ${SRC_FILES})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC
  SWEVAL_BACKENDS_LIB
  ETISS
)

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC
  include/
)

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE
  include/monitors
)

ADD_SUBDIRECTORY(variants)
